# pyxel-utilities

./: README.md  pyproject.toml
examples/: animations_example.py  assets.pyxres  draw_example.py  example.py  example_1.py  example_2.py  lights_example.py  particles_example.py
src/pyxel_utilities/: __init__.py  animation.py  animations.py  collisions.py  draw.py  game.py  gui.py  lights.py  other.py  palette.py  particles.py  var.py  vars.py
src/pyxel_utilities.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
