[project]
name = "pyxel_utilities"
version = "1.0.0"
description = "A bunch of pyxel utilities "
authors = [{ name = "Léo Imbert", email = "leoimbert5210@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.urls]
Homepage = "https://github.com/LeoI52/pyxel-utilities"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"